Updated for Arista, 2024-04-29

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -11,20 +11,16 @@
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 
 \documentclass[localFont,alternative,10pt,compact]{yaac-another-awesome-cv}
-\name{Christophe}{Roger}
-\tagline{Architecte Logiciel | Développeur/Concepteur Senior Java/JEE}
-\photo{2.5cm}{darwiin}
+\name{Subhajoy}{Das}
+\tagline{Senior Software Engineer | Data Architect }
 \socialinfo{
-	\linkedin{christopheroger}
-	\github{darwiin}\\
-	\smartphone{+687 831 831}
-	\email{christophe.roger@mail.com}\\
-	\address{17 Rue de Bretagne, 98835 Dumbéa, Nouvelle-Calédonie}\\
-	\infos{Né le 23 septembre 1982 (35 ans) à Nouméa, Nouvelle-Calédonie}
+	\linkedin{subhajoy-das}\\
+	\smartphone{+91 8697167050}
+	\email{subhajoydas94@gmail.com}
 }
 
 % Uncomment the following line and use a value from 1.5cm to 2.5cm
-% \setleftcolumnlength{2.5cm}
+\setleftcolumnlength{2.3cm}
 
 % Uncomment to add the bibliography (see section_publications.tex)
 \addbibresource{my_publications.bib}
@@ -34,18 +30,13 @@
 	\makecvheader
 
 	\makecvfooter
-		{\textsc{\today}} % \selectlanguage{english}\today
-		{\textsc{Christophe Roger - CV}}
+		{\textsc{\selectlanguage{english}\today}} % \selectlanguage{english}\today
+		{\textsc{Subhajoy Das - CV}}
 		{\thepage}
 
 	\input{section_headline_archi}
 	\input{section_competences}				% Section compétence
 	\input{section_experience_short}		% Section expérience
-	\input{section_langues}					% Section langues
 	\input{section_scolarite}				% Section scolarité
-	%\input{section_interets}				% Section intérêts
-	\input{section_projets}
-	\input{section_references} 				% Section références
-	\input{section_publications}			% Section publications
 
 \end{document}
