--- a/cv/section_experience_short.tex
+++ b/cv/section_experience_short.tex
@@ -14,7 +14,7 @@
 %\renewcommand{\labelitemi}{$\bullet$}
 \begin{experiences}
   \experience
-    {Current}       {Lead Engineer | Product Owner}{Arista Networks (Feb 22 to present)}{Bangalore}
+    {Current}       {Project: AskAVA | Lead Engineer, Product Owner}{Arista Networks}{Feb 22 to present}
     {February 2024} {
                       \begin{itemize}
                         \item Designed an LLM based chat interface for network security analysts to interact with all resources
@@ -27,7 +27,7 @@
                     {OpenAI,Gemini,LLM,Vertex AI,Milvus,FAISS,LlamaIndex,Docker,VS Code}
   \emptySeparator
   \experience
-    {December 2023} {Lead Engineer | Product Owner}{Arista Networks (Feb 22 to present)}{Bangalore}
+    {December 2023} {Project: IoC++ | Lead Engineer, Product Owner}{Arista Networks}{Feb 22 to present}
     {January 2024}  {
                       \begin{itemize}
                         \item Designed an interactive platform to enable threat researchers gain an holistic view on IoCs
@@ -39,7 +39,7 @@
                     {FastAPI,Python,OpenAPI,Postgres,Multithreading,AsyncIO,cron,Streamlit}
   \emptySeparator
   \experience
-    {March 2022}    {Lead Engineer | Product Owner}{Arista Networks (Feb 22 to present)}{Bangalore}
+    {March 2022}    {Project: DeviceAVA | Lead Engineer, Product Owner}{Arista Networks}{Feb 22 to present}
     {November 2023} {
                       \begin{itemize}
                         \item Designed a system of gRPC microservices in Python, responsible for device fingerprinting 
@@ -55,7 +55,7 @@
                     {gRPC,Python,Hyperscan,Jinja,Docker,AWS Fargate,ALB,Terraform,Airflow,GPDB,Prometheus,Grafana}
   \emptySeparator
   \experience
-    {December 2019} {Data Scientist II}{Meesho (Dec 19 to Feb 22)}{Bangalore}
+    {December 2019} {Project: Catalog Recommendation | Data Scientist II}{Meesho}{Dec 19 to Feb 22}
     {February 2022} {
                       \begin{itemize}
                         \item Modeled a collaborative filtering based recommender engine using ALS method for Matrix Factorization
@@ -69,7 +69,7 @@
                     {Recommendation System,DropoutNet,Collaborative Filtering,Apache Spark,Airflow,Tensorflow,Redis}
   \emptySeparator
   \experience
-  {October 2018}  {MTS Software Developer I/II}{Adobe Inc. (July 17 to Dec 19)}{Bangalore}
+  {October 2018}  {Project: DCO | MTS Software Developer I/II}{Adobe Inc.}{July 17 to Dec 19}
   {December 2019} {
                     \begin{itemize}
                       \item Modeled the problem of Dynamic Creative Optimization as a Contextual Multi-armed Bandit Problem to progressively model user affinity towards different ad creatives
